--- a/assets/styles/common_style.css
+++ b/assets/styles/common_style.css
@@ -793,11 +793,12 @@ img {
   letter-spacing: 1px;
   padding: 0.3rem 0.75rem;
   border-radius: 0.25rem;
-  color: var(--color-text-primary);
+  color: var(--color-bg);
 }
 
 .category.sports {
   background-color: var(--color-link);
+
 }
 
 .category.travel {
@@ -808,7 +809,7 @@ img {
   background-color: var(--color-accent);
 }
 
-.post-card {
+.blog-card {
   background-color: var(--color-surface);
   border-radius: 1rem;
   padding: 1.2rem;
@@ -816,7 +817,7 @@ img {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.post-card:hover {
+.blog-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
 }
@@ -839,25 +840,22 @@ img {
   font-size: 0.9rem;
 }
 
-.post-title {
+.blog-title {
   font-weight: 700;
   font-size: 1.5rem;
   margin-bottom: 1rem;
   color: var(--color-text-primary);
 }
 
-.post-desc {
+.blog-desc {
   color: var(--color-text-muted);
   font-size: 0.95rem;
   line-height: 1.7;
-  text-align: justify;
-  /* text-overflow: ellipsis;  */
   overflow: hidden;
   text-overflow: ellipsis;
-  /* font-size: 0.95rem; */
 }
 
-.post-image {
+.blog-image {
   width: 100%;
   height: 160px;
   border-radius: 0.5rem;
