Home page optimized

--- a/assets/styles/common_style.css
+++ b/assets/styles/common_style.css
@@ -78,7 +78,7 @@ body {
   }
 
   50% {
-    box-shadow: 5px 0 0 rgb(179, 255, 0)
+    box-shadow: 5px 0 0 var(--color-accent)
   }
 }
 
@@ -360,6 +360,7 @@ body {
 
 .cust-review .testnm-name {
   color: var(--color-accent);
+  font-size: 1.1rem;
 }
 
 .cust-review .testnm-post {
@@ -470,24 +471,6 @@ body {
 }
 
 /* --- New/Updated Icon Styles for User's Stack --- */
-.icon-html {
-  background-color: #E44D26;
-  color: white;
-  font-size: 0.8rem;
-}
-
-.icon-css {
-  background-color: #2965f1;
-  color: white;
-  font-size: 0.8rem;
-}
-
-.icon-js {
-  background-color: #F7DF1E;
-  color: black;
-  font-size: 0.8rem;
-}
-
 .icon-bootstrap {
   background-color: #7952B3;
   color: white;
@@ -500,12 +483,6 @@ body {
   font-size: 1.2rem;
 }
 
-.icon-redux {
-  background-color: #764ABC;
-  color: white;
-  font-size: 0.8rem;
-}
-
 .icon-xml {
   background-color: #FF6600;
   color: white;
@@ -516,18 +493,6 @@ body {
   background-color: #3B5998;
   color: white;
   font-size: 0.8rem;
-}
-
-.icon-csharp {
-  background-color: #684990;
-  color: white;
-  font-size: 1.2rem;
-}
-
-.icon-aspnet {
-  background-color: #512BD4;
-  color: white;
-  font-size: 0.7rem;
 }
 
 .icon-dapper {
@@ -594,18 +559,6 @@ body {
   background-color: #20C997;
   color: white;
   font-size: 0.9rem;
-}
-
-.icon-python {
-  background-color: #3776AB;
-  color: #FFD43B;
-  font-size: 1.5rem;
-}
-
-.icon-matlab {
-  background-color: #0076a8;
-  color: white;
-  font-size: 0.8rem;
 }
 
 /* Tech stack end */
