--- a/assets/styles/common_style.css
+++ b/assets/styles/common_style.css
@@ -943,9 +943,10 @@ img {
   box-shadow: 0 0 15px rgba(201, 163, 74, 0.3);
 }
 
-.timeline-card h4 {
+.timeline-card h3 {
   color: var(--color-accent);
   font-weight: 600;
+  font-size: large;
 }
 
 .company-logo {
@@ -1005,8 +1006,9 @@ img {
   justify-content: center;
 }
 
-.internships h5 {
+.internships h3 {
   color: var(--color-accent);
+  font-size: large;
 }
 
 .intern-heading {
@@ -1035,9 +1037,6 @@ img {
 }
 
 .profile-img {
-  /* width: 150px;
-  height: 150px; */
-  /* border-radius: 50%; */
   object-fit: cover;
   border: 4px solid var(--color-accent);
   box-shadow: 0 0 15px rgba(102, 178, 255, 0.4);
@@ -1084,7 +1083,6 @@ img {
   font-weight: 600;
   color: var(--color-text-primary);
   padding-left: 30px;
-  /* Align text under the icon */
 }
 
 /* About Text Styling */
@@ -1098,8 +1096,6 @@ img {
 .interests-header {
   font-size: 1.5rem;
   font-weight: 600;
-  /* margin-top: 30px; */
-  /* margin-bottom: 15px; */
   color: var(--color-text-primary);
 }
 
@@ -1122,33 +1118,6 @@ img {
   color: var(--color-bg);
 }
 
-.hero-title span {
-  position: relative;
-}
-
-/* Green/Blue line under the title */
-.hero-title span::after {
-  content: '';
-  position: absolute;
-  bottom: -5px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 80px;
-  height: 4px;
-  border-radius: 2px;
-  background: linear-gradient(to right, var(--color-primary), var(--color-secondary));
-}
-
-.hero-subtitle {
-  font-size: 1.15rem;
-  color: var(--color-text-secondary);
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-/* -------------------------------------- */
-/* Metrics Cards (10+, 50+, 99.9%) */
-/* -------------------------------------- */
 .metric-card {
   border-radius: 8px;
   padding: 15px 10px;
@@ -1225,14 +1194,6 @@ img {
   color: var(--color-icon-red);
 }
 
-.icon-orange {
-  color: var(--color-icon-orange);
-}
-
-.icon-purple {
-  color: var(--color-icon-purple);
-}
-
 .icon-yellow {
   color: var(--color-icon-yellow);
 }
@@ -1278,7 +1239,6 @@ img {
   color: var(--color-accent);
   margin-bottom: 15px;
   display: inline-block;
-
 }
 
 .section-desc {
@@ -1297,7 +1257,6 @@ img {
   height: 2px;
   border-radius: 1px;
   background-color: var(--color-accent);
-
 }
 
 /* About me end */
